Add custom icon
It was surprisingly hard to find a way to do this that didn't pull in Swing or JavaX...which would sort of defeat the purpose of building the thing in AWT, wouldn't it?

--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>pill.png</name>
+			<type>1</type>
+			<location>C:/Users/maste/Documents/Github/Crank-Wars/Crank-Wars/pill.png</location>
+		</link>
+	</linkedResources>
 </projectDescription>
